infra/ingress/traefik-metrics-config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal-metrics
  namespace: kube-system
  labels:
    # Gắn nhãn để ServiceMonitor tìm
    metrics-expose: "true" 
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik 
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
